# bookcoref

./: .gitignore  README.md  download_data.py  evaluate.py  pyproject.toml  requirements.txt
predictions/finetuned_bookcoref/: maverick_xl.jsonl  maverick_xl_splitted.jsonl
predictions/off_the_shelf/: booknlp.jsonl  booknlp_splitted.jsonl  maverick_xl.jsonl  maverick_xl_splitted.jsonl
scripts/: download_data.py
src/: metrics.py
